Attempt to fix wrapping on a placeholder image

--- a/styles.css
+++ b/styles.css
@@ -81,16 +81,9 @@ button {
     display: flex;
     flex-direction: column;
     width: 50%;
-    
-}
-
-.placeholder-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    text-align: center;
+    /* IF NOT WORKING THIS IS TO BLAME: */
+    padding-left: 10px;
+    flex: 0 0 350px; 
 }
 
 .both-wrapper {
@@ -100,6 +93,17 @@ button {
     flex-wrap: wrap;
     padding-bottom: 12vh;
     background-color: #1F2937;
+    gap: 20px;
+}
+.placeholder-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 35%;
+    min-height: 150px;
+    flex: 0 0 auto;
+    text-align: center;
+    background-color: lightslategrey;
 }
 
 .inspiring-text-wrapper {
@@ -154,7 +158,7 @@ button {
 }
 
 .hero-text {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bolder;
     color: #F9FAF8;
 }
@@ -167,3 +171,4 @@ button {
 ul {
     color: white;
 }
+
